fix responsive overflow in select difficulty

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 /* defining css variables */
 :root {
@@ -317,10 +318,13 @@ body {
 .difficulty_list {
   list-style-type: none;
   line-height: 30px;
+  overflow-y: hidden;
+  width: 100%;
 }
 
 .difficulty_option {
-  font-size: 2rem;
+  font-size: 1.6rem;
+  width: 100%;
   cursor: pointer;
   text-align: center;
   margin-top: 20px;
